--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   "devDependencies": {
     "coffee-script": "^1.12.2",
     "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
     "gulp-connect": "^5.0.0",
-    "gulp-sass": "^3.0.0"
+    "gulp-sass": "^3.0.0",
+    "gulp-uglify": "^2.0.0",
+    "main-bower-files": "^2.13.1"
   }
 }
