--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
   "repository": "https://github.com/johnmendonca/html5-project",
   "license": "MIT",
   "devDependencies": {
+    "browserify": "^14.1.0",
     "coffee-script": "^1.12.2",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-connect": "^5.0.0",
+    "gulp-purescript": "^2.0.0",
     "gulp-sass": "^3.0.0",
     "gulp-uglify": "^2.0.0",
-    "main-bower-files": "^2.13.1"
+    "main-bower-files": "^2.13.1",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
